@startuml

interface Subject {
registerObserver()
removeObserver()
notifyObservers()

}

interface Observer {
update()
}

interface DisplayElement {
display()
}

class WeatherData {
registerObserver()
removeObserver()
notifyObservers()

getTemperature()
getHumidity()
getPressure()
measurementsChanged()
}

class CurrentConditionsDisplay {
display()
update()
}

class StatisticsDisplay {
display()
update()
}

class ForecastDisplay {
display()
update()
}

class AddOnDisplay {
display()
update()
}

'implementation arrows
WeatherData ..> Subject

CurrentConditionsDisplay ..> Observer
StatisticsDisplay ..> Observer
ForecastDisplay ..> Observer
AddOnDisplay ..> Observer

CurrentConditionsDisplay ..> DisplayElement
StatisticsDisplay ..> DisplayElement
ForecastDisplay ..> DisplayElement
AddOnDisplay ..> DisplayElement

'observer arrows
Subject --> Observer :observes

'subject arrows
CurrentConditionsDisplay ---> WeatherData :subject
StatisticsDisplay ---> WeatherData :subject
ForecastDisplay ---> WeatherData :subject
AddOnDisplay ---> WeatherData :subject
@enduml
